integrated next.js with_styled_jsx_plugins example

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,16 @@
 {
-  "presets": ["next/babel"],
+  "presets": [
+    [
+      "next/babel",
+      {
+        "styled-jsx": {
+          "plugins": [
+            "styled-jsx-plugin-postcss"
+          ]
+        }
+      }
+    ]
+  ],
   "plugins": [
     [
       "transform-assets",
