--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
   },
   "dependencies": {
     "babel-plugin-transform-assets": "^0.2.0",
+    "lost": "8.2.0",
     "next": "latest",
+    "postcss-nested": "2.1.2",
     "react": "16.2.0",
-    "react-dom": "16.2.0"
+    "react-dom": "16.2.0",
+    "styled-jsx-plugin-postcss": "0.1.0"
+  },
+    "postcss": {
+    "plugins": {
+      "lost": {},
+      "postcss-nested": {}
+    }
   }
 }
